<resources>
    <string name="app_name">ATMProject2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="chon_ngan_hang">Chọn ngân hàng để hiển thị:</string>

    <string name="action_settings">Settings</string>
    <string name="atm">ATM</string>
    <string name="project2_duong_the_cuong">Project2 Dương Thế Cường</string>
    <string name="home">Trang chủ</string>
    <string name="search">Tìm kiếm ATM</string>
    <string name="setting">Cài đặt</string>
    <string name="vi_tri_cua_toi">Vị trí của tôi.</string>
    <string name="dịa_diem_ket_thuc">Địa điểm đến.</string>
    <string name="tim_kiem">Tìm kiếm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="kieu_hien_thi_map">Kiểu hiển thị bản đồ</string>
    <string name="quan">Quận: </string>
    <string name="ngan_hang">Ngân hàng: </string>
    <string name="danh_sach">Danh sách ngân hàng </string>

    <string name="none">None</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>

    <string name="chi_duong">Chỉ đường</string>
    <string name="dong_y">Đồng ý</string>
    <string name="thoat">Thoát</string>


    <string name="day_la_dau">Đây là đâu ?</string>
    <string name="thanh_cong">Thành công</string>
    <string name="thong_bao">Thông báo! </string>
    <string name="dang_tai">Đang tải dữ liệu.Vui lòng chờ... </string>
    <string name="loi_chua_nhap">Bạn chưa nhập dữ liệu....</string>
    <string name="luu_thay_doi">Bạn có muốn lưu lại thay đổi không? </string>
    <string name="chon_tat_ca">Chọn tất cả: </string>
    <string name="chon_kieu_duong_di">Chọn loại đường: </string>
    <string name="luu">Lưu</string>
    <string name="chua_bat_GPS">Bạn chưa bật GPS</string>

    <string-array name="arrQuan">
        <item>Ba Đình</item>
        <item>Bắc Từ Liêm</item>
        <item>Cầu Giấy</item>
        <item>Đống Đa</item>
        <item>Hà Đông</item>
        <item>Hai Bà Trưng</item>
        <item>Hoàn Kiếm</item>
        <item>Hoàng Mai</item>
        <item>Long Biên</item>
        <item>Nam Từ Liêm</item>
        <item>Thanh Xuân</item>
        <item>Tây Hồ</item>
    </string-array>

    <string-array name="arrNganHang">
        <item>Agribank</item>
        <item>Vietinbank</item>
        <item>Vietcombank</item>
        <item>Sacombank</item>
        <item>MB Bank</item>
        <item>Techcombank</item>
        <item>DongA Bank</item>
        <item>VIB</item>
        <item>ACB</item>
    </string-array>
    <string-array name="arrKieuDuong">
        <item>Xe đạp</item>
        <item>Ô tô</item>
    </string-array>

</resources>
