<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.com.ambe.fragment.SettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_5dp"
            android:padding="@dimen/size_5dp"
            android:text="@string/chon_ngan_hang"
            android:textSize="@dimen/size_20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_chon_tat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/size_5dp"
                android:textSize="@dimen/size_20dp"
                android:text="@string/chon_tat_ca" />

            <CheckBox
                android:id="@+id/chk_chon_tat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <ListView
            android:id="@+id/list_ngan_hang"
            android:layout_width="match_parent"
            android:layout_height="261dp"></ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_5dp"
                android:padding="@dimen/size_5dp"
                android:text="@string/chon_kieu_duong_di"
                android:layout_weight="1"
                android:textSize="@dimen/size_20dp" />

            <Spinner
                android:id="@+id/spr_kieu_duong"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"></Spinner>
        </LinearLayout>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/luu" />

    </LinearLayout>

</FrameLayout>
